--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "multer": "^1.4.2",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
+    "retry-as-promised": "^3.2.0",
     "sequelize": "^5.21.5",
     "yup": "^0.28.3"
   },
