--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Modulo2",
+  "name": "gobarber",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bluebird": "^3.7.2",
     "date-fns": "^2.0.0-beta.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.4",
     "multer": "^1.4.2",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
