--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "dev:debug": "nodemon --inspect src/server.js"
   },
   "dependencies": {
+    "@sentry/node": "5.14.1",
     "bcryptjs": "^2.4.3",
     "bee-queue": "^1.2.3",
     "bluebird": "^3.7.2",
     "date-fns": "^2.0.0-beta.5",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "express-handlebars": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.4",
@@ -24,6 +26,7 @@
     "pg-hstore": "^2.3.3",
     "retry-as-promised": "^3.2.0",
     "sequelize": "^5.21.5",
+    "youch": "^2.0.10",
     "yup": "^0.28.3"
   },
   "devDependencies": {
